New: - Added keepAlive to MySQL database